--- a/BJJInParadise.Web/Views/Account/Register.cshtml
+++ b/BJJInParadise.Web/Views/Account/Register.cshtml
@@ -54,9 +54,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Country, new { @class = "col-md-2 control-label" })
+         
+            @Html.LabelFor(m => m.Country, new {@class = "col-md-2 control-label"})
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Country, new { @class = "form-control" })
+                @Html.DropDownListFor(x => x.Country,Model.Countries, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         <div class="form-group">
