--- a/BJJInParadise.Web/Views/Booking/Index.cshtml
+++ b/BJJInParadise.Web/Views/Booking/Index.cshtml
@@ -21,28 +21,32 @@
             width: 150px;
         }
 
-  
+
         .credit-card-box .panel-title {
             display: inline;
             font-weight: bold;
         }
+
         .credit-card-box .form-control.error {
             border-color: red;
             outline: 0;
             box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(255,0,0,0.6);
         }
+
         .credit-card-box label.error {
             font-weight: bold;
             color: red;
             padding: 2px 8px;
             margin-top: 2px;
         }
+
         .credit-card-box .payment-errors {
             font-weight: bold;
             color: red;
             padding: 2px 8px;
             margin-top: 2px;
         }
+
         .credit-card-box label {
             display: block;
         }
@@ -50,9 +54,11 @@
         .credit-card-box .display-table {
             display: table;
         }
+
         .credit-card-box .display-tr {
             display: table-row;
         }
+
         .credit-card-box .display-td {
             display: table-cell;
             vertical-align: middle;
@@ -70,7 +76,8 @@
         @Html.AntiForgeryToken()
         @Html.HiddenFor(x => x.UserId)
         @Html.HiddenFor(x => x.Email)
-         <div id="smartwizard">
+        @Html.HiddenFor(x => x.RoomOptions)
+        <div id="smartwizard">
             <ul>
                 <li><a href="#step-1">Contact Info<br /><small>Who's booking this?</small></a></li>
                 <li><a href="#step-2">Choose a Camp<br /><small>Which one?</small></a></li>
@@ -82,42 +89,43 @@
                     <div class="container">
 
                         <div class="table-responsive">
-
+                            @Html.ValidationSummary()
                             <table class="table">
                                 <tbody>
-                                <tr>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.FirstName)</label></td>
-                                    <td>@Html.EditorFor(x => x.FirstName, new {htmlAttributes=new{ @class = "form-control" } })</td>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.LastName)</label></td>
-                                    <td>@Html.EditorFor(x => x.LastName, new {htmlAttributes=new{ @class = "form-control" } })</td>
-             
-                                </tr>
-                                <tr>
-                                    <td class="tableLabel"><label class="control-label">@Html.DisplayNameFor(x => x.Country)</label></td>
-                                    <td>  @Html.DropDownListFor(x => x.Country,Model.Countries, new { htmlAttributes = new { @class = "form-control" } })
-                                        </td>
-                                    <td class="tableLabel"><label class="control-label">@Html.DisplayNameFor(x => x.ZipCode)</label></td>
-                                    <td>@Html.EditorFor(x => x.ZipCode, new {htmlAttributes=new{ @class = "form-control" } })</td>
-                                </tr>
-                                <tr>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.Street)</label></td>
-                                    <td colspan="6">@Html.EditorFor(x => x.Street, new { htmlAttributes = new { @class = "form-control", style="width: 100%" } })</td>
-                                  
-                                </tr>
-                                <tr>
-                                    
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.City)</label></td>
-                                    <td>@Html.EditorFor(x => x.City, new { htmlAttributes = new { @class = "form-control" } })</td>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.State)</label></td>
-                                    <td>@Html.EditorFor(x => x.State, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                    <tr>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.FirstName)</label></td>
+                                        <td>@Html.EditorFor(x => x.FirstName, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.LastName)</label></td>
+                                        <td>@Html.EditorFor(x => x.LastName, new { htmlAttributes = new { @class = "form-control" } })</td>
 
-                                </tr>
-                                <tr>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.PhoneNumber)</label></td>
-                                    <td>@Html.EditorFor(x => x.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })</td>
-                                    <td><label class="control-label">@Html.DisplayNameFor(x => x.HomeGym)</label></td>
-                                    <td>@Html.EditorFor(x => x.HomeGym, new { htmlAttributes = new { @class = "form-control" } })</td>
-                                </tr>
+                                    </tr>
+                                    <tr>
+                                        <td class="tableLabel"><label class="control-label">@Html.DisplayNameFor(x => x.Country)</label></td>
+                                        <td>
+                                            @Html.DropDownListFor(x => x.Country, Model.Countries, new { htmlAttributes = new { @class = "form-control" } })
+                                        </td>
+                                        <td class="tableLabel"><label class="control-label">@Html.DisplayNameFor(x => x.ZipCode)</label></td>
+                                        <td>@Html.EditorFor(x => x.ZipCode, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                    </tr>
+                                    <tr>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.Street)</label></td>
+                                        <td colspan="6">@Html.EditorFor(x => x.Street, new { htmlAttributes = new { @class = "form-control", style = "width: 100%" } })</td>
+
+                                    </tr>
+                                    <tr>
+
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.City)</label></td>
+                                        <td>@Html.EditorFor(x => x.City, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.State)</label></td>
+                                        <td>@Html.EditorFor(x => x.State, new { htmlAttributes = new { @class = "form-control" } })</td>
+
+                                    </tr>
+                                    <tr>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.PhoneNumber)</label></td>
+                                        <td>@Html.EditorFor(x => x.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                        <td><label class="control-label">@Html.DisplayNameFor(x => x.HomeGym)</label></td>
+                                        <td>@Html.EditorFor(x => x.HomeGym, new { htmlAttributes = new { @class = "form-control" } })</td>
+                                    </tr>
                                 </tbody>
                             </table>
 
@@ -125,28 +133,29 @@
                     </div>
                 </div>
                 <div id="step-2" class="">
+                    @Html.ValidationSummary()
                     <div class="row">
                         <div class="container">
                             <label class="control-label">@Html.DisplayNameFor(x => x.AllAvailableCamps)</label>
-                            @Html.DropDownListFor(x => x.CampId, Model.AllAvailableCamps, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.DropDownListFor(x => x.CampId, Model.AllAvailableCamps, new {htmlAttributes = new {@class = "form-control"}})
 
                         </div>
                     </div>
                     <div class="row">
                         <div class="container">
                             <label class="control-label">@Html.DisplayNameFor(x => x.RoomOptions)</label>
-                            @Html.DropDownListFor(x => x.CampRoomOptionId, Model.RoomOptions, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.DropDownListFor(x => x.CampRoomOptionId, Model.RoomOptions, new {htmlAttributes = new {@class = "form-control"}})
 
                         </div>
                     </div>
                 </div>
                 <div id="step-3" class="">
                     <div class="container">
-  
+                        @Html.ValidationSummary()
                         <div class="row">
                             <!-- You can make it whatever width you want. I'm making it full width
                             on <= small devices and 4/12 page width on >= medium devices -->
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-md-8">
 
 
                                 <!-- CREDIT CARD FORM STARTS HERE -->
@@ -155,68 +164,68 @@
                                         <div class="row display-tr">
                                             <h3 class="panel-title display-td">Payment Details</h3>
                                             <div class="display-td">
-                                                <img class="img-responsive pull-right" src="http://i76.imgup.net/accepted_c22e0.png">
+                                                <img class="img-responsive pull-right" src="//i76.imgup.net/accepted_c22e0.png">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="panel-body">
-                             
-                                            <div class="row">
-                                                <div class="col-xs-12">
-                                                    <div class="form-group">
-                                                        @Html.DisplayNameFor(x => x.CreditCard)
-                                                        <div class="input-group">
-                                                            @Html.EditorFor(model => model.CreditCard, new {htmlAttributes = new {@class = "form-control", placeholder = "Valid Card Number"} })
+
+                                    <div class="">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    @Html.DisplayNameFor(x => x.CreditCard)
+                                                    <div class="input-group">
+                                                        @Html.EditorFor(model => model.CreditCard, new { htmlAttributes = new { @class = "form-control", placeholder = "Valid Card Number" } })
 
 
-                                                            <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
-                                                        </div>
+                                                        <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row">
-                                                <div class="col-xs-7 col-md-7">
-                                                    <div class="form-group">
-                                                        @Html.DisplayNameFor(x => x.Expiration)
-                                                        <div class="input-group">
-                                                            @Html.EditorFor(model => model.Expiration, new {htmlAttributes = new {@class = "form-control", placeholder = "MM / YY"}})
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-7 col-md-7">
+                                                <div class="form-group">
+                                                    @Html.DisplayNameFor(x => x.Expiration)
+                                                    <div class="input-group">
+                                                        @Html.EditorFor(model => model.Expiration, new { htmlAttributes = new { @class = "form-control", placeholder = "MM/YYYY" } })
 
-
-                                                        </div>
 
                                                     </div>
+
                                                 </div>
-                                                <div class="col-xs-5 col-md-5 pull-right">
-                                                    <div class="form-group">
-                                                        @Html.DisplayNameFor(x => x.CVC)
-                                                        <div class="input-group">
-                                                            @Html.EditorFor(model => model.CVC, new {htmlAttributes = new {@class = "form-control", placeholder = "CVC"}})
+                                            </div>
+                                            <div class="col-5 col-md-5 pull-right">
+                                                <div class="form-group">
+                                                    @Html.DisplayNameFor(x => x.CVC)
+                                                    <div class="input-group">
+                                                        @Html.EditorFor(model => model.CVC, new { htmlAttributes = new { @class = "form-control", placeholder = "CVC" } })
 
-
-                                                        </div>
 
                                                     </div>
-                                                </div>
-                                            </div>
 
-                                            <div class="row">
-                                                <div class="col-xs-12">
-                                                    <button class="btn btn-success btn-lg btn-block" type="submit">Checkout</button>
                                                 </div>
                                             </div>
-                                            <div class="row" style="display: none;">
-                                                <div class="col-xs-12">
-                                                    <p class="payment-errors"></p>
-                                                </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <button class="btn btn-success btn-lg btn-block" type="submit">Checkout</button>
                                             </div>
-                                
+                                        </div>
                                     </div>
+                                    <div class="row" style="display: none;">
+                                        <div class="col-xs-12">
+                                            <p class="payment-errors"></p>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                   
+
             </div>
         </div>
 
@@ -229,10 +238,10 @@
 </div>
 
 @section Scripts {
-     <script src="~/Scripts/jquery.smartWizard.js"></script>
-
+    <script src="~/Scripts/jquery.smartWizard.js"></script>
+    @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-    
+
 
 
 
@@ -263,9 +272,13 @@
                     counter -= 1;
                 });
 
-       
+            $("#CampId").change();
         });
-
+        $('#CreditCard').on('keypress change', function () {
+            $(this).val(function (index, value) {
+                return value.replace(/\W/gi, '').replace(/(.{4})/g, '$1 ');
+            });
+        });
 
         $("#CampId").change(function() {
             var camp = $("#CampRoomOptionId").empty();
@@ -278,8 +291,6 @@
                     },
                     "json").done(function(data) {
 
-
-                    camp.append($('<option></option>').text("-- Select -- ").val(0));
                     $.each(data.data,
                         function(index, item) { // item is now an object containing properties ID and Text
                             camp.append($('<option></option>').text(item.RoomType + ' ' + formatAsCurrency(item.CostPerPerson))
